Updated CSV retrieval method
Implemented way to retrieve the CSV file and a fail safe in-case the csv can not be downloaded with the code

--- a/IMDB Notebook.ipynb
+++ b/IMDB Notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "afd4483b",
    "metadata": {},
    "source": [
-    "This is to ensure you have the proper tools installed and MySQL running in Linux"
+    "### This is to ensure you have the proper tools installed and MySQL running in Linux"
    ]
   },
   {
@@ -49,12 +49,22 @@
    "id": "3f834ad7",
    "metadata": {},
    "source": [
-    "This checks if the necessary files are accessible and available"
+    "### This checks if the necessary files are accessible and available"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c2d81bf",
+   "metadata": {},
+   "source": [
+    "If the csv file can not be found download here and make sure it is in the correct directory:\n",
+    "\n",
+    "https://drive.google.com/file/d/1B0P20CU9JP1I-jj0sgnq4QRvrtRLgUxF/view?usp=drive_link"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "8b50c7ac",
    "metadata": {},
    "outputs": [
@@ -75,12 +85,21 @@
     "if (current_dir / csv_file).is_file():\n",
     "    print(\"CSV present\")\n",
     "else:\n",
-    "    print(\"CSV not present\")"
+    "    import kagglehub\n",
+    "    cached_path = Path(kagglehub.dataset_download(\"shubhamchandra235/imdb-and-tmdb-movie-metadata-big-dataset-1m\"))\n",
+    "    \n",
+    "    if cached_path.is_file():\n",
+    "        csv_file = cached_path\n",
+    "    elif cached_path.is_dir():\n",
+    "        csv_file = list(cached_path.glob(\"*.csv\"))[0]\n",
+    "        target_dir = str(current_dir) + \"/IMDB Movie Big Dataset.csv\"\n",
+    "        os.rename(csv_file, target_dir)\n",
+    "        print(\"Successfully downloaded and moved file\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "2e3353d4",
    "metadata": {},
    "outputs": [
