--- a/IMDB Notebook.ipynb
+++ b/IMDB Notebook.ipynb
@@ -3,45 +3,46 @@
   {
    "cell_type": "markdown",
    "id": "afd4483b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "### This is to ensure you have the proper tools installed and MySQL running in Linux"
+    "## This is to ensure you have the proper tools installed and MySQL running in Linux"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "d34650a7",
+   "execution_count": 6,
+   "id": "10139b07-2a3e-4854-9a6e-587e32cf7dc7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mysql  Ver 8.0.45-0ubuntu0.24.04.1 for Linux on x86_64 ((Ubuntu))\n",
-      "Python 3.12.3\n",
-      "mysql  Ver 8.0.45-0ubuntu0.24.04.1 for Linux on x86_64 ((Ubuntu))\n",
-      "\u001b[0;1;32m●\u001b[0m mysql.service - MySQL Community Server\n",
-      "     Loaded: loaded (\u001b]8;;file://SoloBolo/usr/lib/systemd/system/mysql.service\u0007/usr/lib/systemd/system/mysql.service\u001b]8;;\u0007; \u001b[0;1;32menabled\u001b[0m; preset: \u001b[0;1;32menabled\u001b[0m)\n",
-      "     Active: \u001b[0;1;32mactive (running)\u001b[0m since Thu 2026-02-05 22:08:51 GMT; 1h 41min ago\n",
-      "    Process: 27353 ExecStartPre=/usr/share/mysql/mysql-systemd-start pre (code=exited, status=0/SUCCESS)\n",
-      "   Main PID: 27362 (mysqld)\n",
-      "     Status: \"\u001b[0;1;36mServer is operational\u001b[0m\"\n",
-      "      Tasks: 37 (limit: 9105)\n",
-      "     Memory: 58.3M ()\n",
-      "     CGroup: /system.slice/mysql.service\n",
-      "             └─\u001b[0;38;5;245m27362 /usr/sbin/mysqld\u001b[0m\n",
-      "\n",
-      "Feb 05 22:08:50 SoloBolo systemd[1]: Starting mysql.service - MySQL Communi…r...\n",
-      "Feb 05 22:08:51 SoloBolo systemd[1]: Started mysql.service - MySQL Communit…ver.\n",
-      "Hint: Some lines were ellipsized, use -l to show in full.\n"
+      "Requirement already satisfied: pandas in ./venv/lib/python3.12/site-packages (3.0.0)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in ./venv/lib/python3.12/site-packages (from pandas) (2.4.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in ./venv/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in ./venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting mysql-connector-python\n",
+      "  Downloading mysql_connector_python-9.6.0-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (11 kB)\n",
+      "Downloading mysql_connector_python-9.6.0-cp312-cp312-manylinux_2_28_x86_64.whl (34.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.5/34.5 MB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[?25hInstalling collected packages: mysql-connector-python\n",
+      "Successfully installed mysql-connector-python-9.6.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: SQLAlchemy in ./venv/lib/python3.12/site-packages (2.0.46)\n",
+      "Requirement already satisfied: greenlet>=1 in ./venv/lib/python3.12/site-packages (from SQLAlchemy) (3.3.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in ./venv/lib/python3.12/site-packages (from SQLAlchemy) (4.15.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!mysql --version\n",
-    "!python3 --version\n",
-    "!service mysql status"
+    "%pip install pandas\n",
+    "%pip install mysql-connector-python\n",
+    "%pip install SQLAlchemy"
    ]
   },
   {
@@ -49,7 +50,7 @@
    "id": "3f834ad7",
    "metadata": {},
    "source": [
-    "### This checks if the necessary files are accessible and available"
+    "## This checks if the necessary files are accessible and available"
    ]
   },
   {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "8b50c7ac",
    "metadata": {},
    "outputs": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "2e3353d4",
    "metadata": {},
    "outputs": [
@@ -107,7 +108,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SQL file present\n"
+      "SQL file present\n",
+      "Loaded df\n"
      ]
     }
    ],
@@ -118,9 +120,11 @@
     "SQL_file = \"IMDB Movie Big Dataset.sql\"\n",
     "if (current_dir / SQL_file).is_file():\n",
     "    print(\"SQL file present\")\n",
+    "    engine = create_engine('sqlite:///IMDB Movie Big Dataset.sql', echo=False)\n",
+    "    df = pd.read_sql_table(\"Fullstats\", con=engine)\n",
+    "    print(\"Loaded dataframe\")\n",
     "else:\n",
     "    df = pd.read_csv(csv_file)\n",
-    "\n",
     "    #Creates SQLite database\n",
     "    engine = create_engine('sqlite:///IMDB Movie Big Dataset.sql', echo=False)\n",
     "\n",
@@ -130,254 +134,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "967a194d",
+   "cell_type": "markdown",
+   "id": "f03b0fb7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>status</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>adult</th>\n",
-       "      <th>backdrop_path</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Star3</th>\n",
-       "      <th>Star4</th>\n",
-       "      <th>Writer</th>\n",
-       "      <th>Director_of_Photography</th>\n",
-       "      <th>Producers</th>\n",
-       "      <th>Music_Composer</th>\n",
-       "      <th>genres_list</th>\n",
-       "      <th>Cast_list</th>\n",
-       "      <th>overview_sentiment</th>\n",
-       "      <th>all_combined_keywords</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>27205</td>\n",
-       "      <td>Inception</td>\n",
-       "      <td>8.364</td>\n",
-       "      <td>34495</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>2010-07-15</td>\n",
-       "      <td>825532764</td>\n",
-       "      <td>148</td>\n",
-       "      <td>False</td>\n",
-       "      <td>/8ZTVqvKDQ8emSGUEMjsS4yHAwrp.jpg</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Elliot Page</td>\n",
-       "      <td>Ken Watanabe</td>\n",
-       "      <td>Christopher Nolan</td>\n",
-       "      <td>Wally Pfister</td>\n",
-       "      <td>Thomas Tull, Christopher Nolan, Chris Brigham,...</td>\n",
-       "      <td>Hans Zimmer</td>\n",
-       "      <td>['Action', 'Science Fiction', 'Adventure']</td>\n",
-       "      <td>['Tim Kelleher', 'Silvie Laguna', 'Natasha Bea...</td>\n",
-       "      <td>-0.011111</td>\n",
-       "      <td>['s', 'philosophy', 'skilled', 'kidnapping', '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>157336</td>\n",
-       "      <td>Interstellar</td>\n",
-       "      <td>8.417</td>\n",
-       "      <td>32571</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>2014-11-05</td>\n",
-       "      <td>701729206</td>\n",
-       "      <td>169</td>\n",
-       "      <td>False</td>\n",
-       "      <td>/pbrkL804c8yAv3zBZR4QPEafpAR.jpg</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Jessica Chastain</td>\n",
-       "      <td>Mackenzie Foy</td>\n",
-       "      <td>Jonathan Nolan</td>\n",
-       "      <td>Hoyte van Hoytema</td>\n",
-       "      <td>Jake Myers, Emma Thomas, Jordan Goldberg, Thom...</td>\n",
-       "      <td>Hans Zimmer</td>\n",
-       "      <td>['Adventure', 'Drama', 'Science Fiction']</td>\n",
-       "      <td>['Jeff Hephner', 'William Devane', 'Elyes Gabe...</td>\n",
-       "      <td>0.045455</td>\n",
-       "      <td>['thoughtful', 'use', 'scientist', 'quantum me...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>155</td>\n",
-       "      <td>The Dark Knight</td>\n",
-       "      <td>8.512</td>\n",
-       "      <td>30619</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>2008-07-16</td>\n",
-       "      <td>1004558444</td>\n",
-       "      <td>152</td>\n",
-       "      <td>False</td>\n",
-       "      <td>/nMKdUUepR0i5zn0y1T4CsSB5chy.jpg</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Aaron Eckhart</td>\n",
-       "      <td>Michael Caine</td>\n",
-       "      <td>Jonathan Nolan</td>\n",
-       "      <td>Wally Pfister</td>\n",
-       "      <td>Kevin De La Noy, Thomas Tull, Christopher Nola...</td>\n",
-       "      <td>Hans Zimmer, James Newton Howard</td>\n",
-       "      <td>['Drama', 'Action', 'Crime', 'Thriller']</td>\n",
-       "      <td>['Tommy Lister Jr.', 'Edison Chen', 'Beatrice ...</td>\n",
-       "      <td>0.025000</td>\n",
-       "      <td>['reign', 'harvey', 'proves', 'partnership', '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>19995</td>\n",
-       "      <td>Avatar</td>\n",
-       "      <td>7.573</td>\n",
-       "      <td>29815</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>2009-12-15</td>\n",
-       "      <td>2923706026</td>\n",
-       "      <td>162</td>\n",
-       "      <td>False</td>\n",
-       "      <td>/vL5LR6WdxWPjLPFRLe133jXWsh5.jpg</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Sigourney Weaver</td>\n",
-       "      <td>Michelle Rodriguez</td>\n",
-       "      <td>James Cameron</td>\n",
-       "      <td>Mauro Fiore</td>\n",
-       "      <td>Jon Landau, Colin Wilson, Laeta Kalogridis, Ja...</td>\n",
-       "      <td>James Horner</td>\n",
-       "      <td>['Action', 'Adventure', 'Fantasy', 'Science Fi...</td>\n",
-       "      <td>['Carvon Futrell', 'Joel David Moore', 'Jon Cu...</td>\n",
-       "      <td>0.041667</td>\n",
-       "      <td>['space war', 'civilization', 'society', 'mari...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>24428</td>\n",
-       "      <td>The Avengers</td>\n",
-       "      <td>7.710</td>\n",
-       "      <td>29166</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>2012-04-25</td>\n",
-       "      <td>1518815515</td>\n",
-       "      <td>143</td>\n",
-       "      <td>False</td>\n",
-       "      <td>/9BBTo63ANSmhC4e6r62OJFuK2GL.jpg</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Scarlett Johansson</td>\n",
-       "      <td>Jeremy Renner</td>\n",
-       "      <td>Sydney Newman</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['Science Fiction', 'Action', 'Adventure']</td>\n",
-       "      <td>['Haneyuri', 'Nako Mizusawa', 'Marin', 'Rikako...</td>\n",
-       "      <td>0.025000</td>\n",
-       "      <td>['s', 'world', 'begins', 'e', 'global safety',...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 42 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id            title  vote_average  vote_count    status release_date  \\\n",
-       "0   27205        Inception         8.364       34495  Released   2010-07-15   \n",
-       "1  157336     Interstellar         8.417       32571  Released   2014-11-05   \n",
-       "2     155  The Dark Knight         8.512       30619  Released   2008-07-16   \n",
-       "3   19995           Avatar         7.573       29815  Released   2009-12-15   \n",
-       "4   24428     The Avengers         7.710       29166  Released   2012-04-25   \n",
-       "\n",
-       "      revenue  runtime  adult                     backdrop_path  ...  \\\n",
-       "0   825532764      148  False  /8ZTVqvKDQ8emSGUEMjsS4yHAwrp.jpg  ...   \n",
-       "1   701729206      169  False  /pbrkL804c8yAv3zBZR4QPEafpAR.jpg  ...   \n",
-       "2  1004558444      152  False  /nMKdUUepR0i5zn0y1T4CsSB5chy.jpg  ...   \n",
-       "3  2923706026      162  False  /vL5LR6WdxWPjLPFRLe133jXWsh5.jpg  ...   \n",
-       "4  1518815515      143  False  /9BBTo63ANSmhC4e6r62OJFuK2GL.jpg  ...   \n",
-       "\n",
-       "                Star3               Star4             Writer  \\\n",
-       "0         Elliot Page        Ken Watanabe  Christopher Nolan   \n",
-       "1    Jessica Chastain       Mackenzie Foy     Jonathan Nolan   \n",
-       "2       Aaron Eckhart       Michael Caine     Jonathan Nolan   \n",
-       "3    Sigourney Weaver  Michelle Rodriguez      James Cameron   \n",
-       "4  Scarlett Johansson       Jeremy Renner      Sydney Newman   \n",
-       "\n",
-       "  Director_of_Photography                                          Producers  \\\n",
-       "0           Wally Pfister  Thomas Tull, Christopher Nolan, Chris Brigham,...   \n",
-       "1       Hoyte van Hoytema  Jake Myers, Emma Thomas, Jordan Goldberg, Thom...   \n",
-       "2           Wally Pfister  Kevin De La Noy, Thomas Tull, Christopher Nola...   \n",
-       "3             Mauro Fiore  Jon Landau, Colin Wilson, Laeta Kalogridis, Ja...   \n",
-       "4                     NaN                                                NaN   \n",
-       "\n",
-       "                     Music_Composer  \\\n",
-       "0                       Hans Zimmer   \n",
-       "1                       Hans Zimmer   \n",
-       "2  Hans Zimmer, James Newton Howard   \n",
-       "3                      James Horner   \n",
-       "4                               NaN   \n",
-       "\n",
-       "                                         genres_list  \\\n",
-       "0         ['Action', 'Science Fiction', 'Adventure']   \n",
-       "1          ['Adventure', 'Drama', 'Science Fiction']   \n",
-       "2           ['Drama', 'Action', 'Crime', 'Thriller']   \n",
-       "3  ['Action', 'Adventure', 'Fantasy', 'Science Fi...   \n",
-       "4         ['Science Fiction', 'Action', 'Adventure']   \n",
-       "\n",
-       "                                           Cast_list overview_sentiment  \\\n",
-       "0  ['Tim Kelleher', 'Silvie Laguna', 'Natasha Bea...          -0.011111   \n",
-       "1  ['Jeff Hephner', 'William Devane', 'Elyes Gabe...           0.045455   \n",
-       "2  ['Tommy Lister Jr.', 'Edison Chen', 'Beatrice ...           0.025000   \n",
-       "3  ['Carvon Futrell', 'Joel David Moore', 'Jon Cu...           0.041667   \n",
-       "4  ['Haneyuri', 'Nako Mizusawa', 'Marin', 'Rikako...           0.025000   \n",
-       "\n",
-       "                               all_combined_keywords  \n",
-       "0  ['s', 'philosophy', 'skilled', 'kidnapping', '...  \n",
-       "1  ['thoughtful', 'use', 'scientist', 'quantum me...  \n",
-       "2  ['reign', 'harvey', 'proves', 'partnership', '...  \n",
-       "3  ['space war', 'civilization', 'society', 'mari...  \n",
-       "4  ['s', 'world', 'begins', 'e', 'global safety',...  \n",
-       "\n",
-       "[5 rows x 42 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.head()"
+    "## Naïve Implementetation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f03b0fb7",
+   "id": "d82bb0d1-c3b4-40ea-91cc-f048ed48a759",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -385,9 +152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "Python (venv)",
    "language": "python",
-   "name": "myenv"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
