Fixed missing dependency and incorrect file path

--- a/IMDB Notebook.ipynb
+++ b/IMDB Notebook.ipynb
@@ -2,47 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "afd4483b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "id": "21ccc61a-1a5e-4103-8241-d7b7ffe82c67",
+   "metadata": {},
    "source": [
-    "## This is to ensure you have the proper tools installed and MySQL running in Linux"
+    "# Section 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afd4483b",
+   "metadata": {},
+   "source": [
+    "## This is to ensure you have the proper tools installed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "10139b07-2a3e-4854-9a6e-587e32cf7dc7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in ./venv/lib/python3.12/site-packages (3.0.0)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in ./venv/lib/python3.12/site-packages (from pandas) (2.4.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in ./venv/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in ./venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Collecting mysql-connector-python\n",
-      "  Downloading mysql_connector_python-9.6.0-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (11 kB)\n",
-      "Downloading mysql_connector_python-9.6.0-cp312-cp312-manylinux_2_28_x86_64.whl (34.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.5/34.5 MB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
-      "\u001b[?25hInstalling collected packages: mysql-connector-python\n",
-      "Successfully installed mysql-connector-python-9.6.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: SQLAlchemy in ./venv/lib/python3.12/site-packages (2.0.46)\n",
-      "Requirement already satisfied: greenlet>=1 in ./venv/lib/python3.12/site-packages (from SQLAlchemy) (3.3.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.0 in ./venv/lib/python3.12/site-packages (from SQLAlchemy) (4.15.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install pandas\n",
     "%pip install mysql-connector-python\n",
-    "%pip install SQLAlchemy"
+    "%pip install SQLAlchemy\n",
+    "%pip install kagglehub"
    ]
   },
   {
@@ -65,54 +49,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8b50c7ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CSV present\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path \n",
     "import os\n",
     "\n",
     "csv_file = \"IMDB Movie Big Dataset.csv\"\n",
     "current_dir = Path(os.getcwd())\n",
+    "\n",
     "if (current_dir / csv_file).is_file():\n",
+    "    csv_file = (current_dir / csv_file)\n",
     "    print(\"CSV present\")\n",
     "else:\n",
     "    import kagglehub\n",
     "    cached_path = Path(kagglehub.dataset_download(\"shubhamchandra235/imdb-and-tmdb-movie-metadata-big-dataset-1m\"))\n",
-    "    \n",
     "    if cached_path.is_file():\n",
     "        csv_file = cached_path\n",
     "    elif cached_path.is_dir():\n",
     "        csv_file = list(cached_path.glob(\"*.csv\"))[0]\n",
     "        target_dir = str(current_dir) + \"/IMDB Movie Big Dataset.csv\"\n",
     "        os.rename(csv_file, target_dir)\n",
+    "        csv_file = target_dir\n",
     "        print(\"Successfully downloaded and moved file\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2e3353d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SQL file present\n",
-      "Loaded df\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
@@ -148,13 +117,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9655e3ee-8194-4e17-b763-ab5ea74eb7f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
