Implemented personalised SQLite database creator
Added 3 tables, movies, genres and movie_genres as a many to many relationship
Removed SQLalchemy SQL creator

--- a/IMDB Notebook.ipynb
+++ b/IMDB Notebook.ipynb
@@ -79,52 +79,160 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e3353d4",
+   "id": "d310022b-f24d-441a-a1c3-22d3519fd39e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ast\n",
+    "import sqlite3\n",
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine\n",
     "\n",
-    "SQL_file = \"IMDB Movie Big Dataset.sql\"\n",
-    "if (current_dir / SQL_file).is_file():\n",
-    "    print(\"SQL file present\")\n",
-    "    engine = create_engine('sqlite:///IMDB Movie Big Dataset.sql', echo=False)\n",
-    "    df = pd.read_sql_table(\"Fullstats\", con=engine)\n",
-    "    print(\"Loaded dataframe\")\n",
-    "else:\n",
-    "    df = pd.read_csv(csv_file)\n",
-    "    #Creates SQLite database\n",
-    "    engine = create_engine('sqlite:///IMDB Movie Big Dataset.sql', echo=False)\n",
+    "# Turns genres_list from string representation to array \n",
+    "df = pd.read_csv(csv_file)\n",
+    "df['genres_list'] = df['genres_list'].apply(ast.literal_eval)\n",
     "\n",
-    "    #Writes dataframe to SQL table\n",
-    "    df.to_sql('Fullstats', con=engine)\n",
-    "    print(\"SQL file created\")"
+    "# Renames variables to better names\n",
+    "df.rename(columns={\n",
+    "    'Director':'director',\n",
+    "    'genres_list':'genres'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "conn = sqlite3.connect(\"imdb.sqlite\")\n",
+    "cursor = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1b6437b-01f9-470f-9a0f-e60b4445a13e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS movies (\n",
+    "    movie_id INTEGER PRIMARY KEY,\n",
+    "    title TEXT,\n",
+    "    revenue INTEGER,\n",
+    "    budget INTEGER,\n",
+    "    vote_count INTEGER,\n",
+    "    vote_average REAL,\n",
+    "    runtime INTEGER,\n",
+    "    director TEXT\n",
+    "    )\n",
+    "\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS genres (\n",
+    "    genre_id INTEGER PRIMARY KEY,\n",
+    "    name TEXT UNIQUE\n",
+    "    )\n",
+    "\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS movie_genres (\n",
+    "    movie_id INTEGER,\n",
+    "    genre_id INTEGER,\n",
+    "    PRIMARY KEY(movie_id, genre_id),\n",
+    "    FOREIGN KEY(movie_id) REFERENCES movies(movie_id),\n",
+    "    FOREIGN KEY(genre_id) REFERENCES genres(genre_id)\n",
+    "    )\n",
+    "\"\"\")\n",
+    "\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efaeda68-9a57-497f-995a-ca712a7cc132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies = df[['title', 'revenue', 'budget', 'vote_count', 'vote_average', 'runtime', 'director']].drop_duplicates()\n",
+    "movies.to_sql('movies', conn, if_exists='replace', index=True, index_label='movie_id')\n",
+    "\n",
+    "genre_list = set(g for sublist in df['genres'] for g in sublist)\n",
+    "genres = pd.DataFrame({'name': list(genre_list)})\n",
+    "genres.to_sql('genres', conn, if_exists='replace', index=True, index_label='genre_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4025b6e3-4a37-4c51-b1f2-40a2b9430892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets up the many to many relationship\n",
+    "genres_df = pd.read_sql(\"SELECT * FROM genres\", conn)\n",
+    "genre_map = dict(zip(genres_df['name'], genres_df['genre_id']))\n",
+    "\n",
+    "movie_genres = []\n",
+    "for _, row in df.iterrows():\n",
+    "    movie_id = row['movie_id']\n",
+    "    for g in row['genres']:\n",
+    "        movie_genres.append({'movie_id': movie_id, 'genre_id': genre_map[g]})\n",
+    "\n",
+    "movie_genres_df = pd.DataFrame(movie_genres)\n",
+    "movie_genres_df.to_sql('movie_genres', conn, if_exists='replace', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f03b0fb7",
+   "id": "e34f8dd4-4a22-4944-bd9a-466e80b6cba5",
    "metadata": {},
    "source": [
-    "## Naïve Implementetation"
+    "### TEMP to show how to access the SQLite database"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d82bb0d1-c3b4-40ea-91cc-f048ed48a759",
+   "id": "051031ad-bf83-4928-ad98-930621505872",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TEMP to show how to access movies\n",
+    "movies_df = pd.read_sql(\"SELECT * FROM movies\", conn)\n",
+    "movies_df.head(50)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9655e3ee-8194-4e17-b763-ab5ea74eb7f2",
+   "id": "fd815e64-8e88-4087-a2d8-8d2f88fbff6e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TEMP TO show how to access genres\n",
+    "genres_df = pd.read_sql(\"SELECT * FROM genres\", conn)\n",
+    "genres_df.head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b56e66d0-4d48-46bb-a510-96f3a9f7f730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_genres_df = pd.read_sql(\"\"\"\n",
+    "    SELECT m.title, g.name AS genre\n",
+    "    FROM movie_genres mg\n",
+    "    JOIN movies m ON mg.movie_id = m.movie_id\n",
+    "    JOIN genres g ON mg.genre_id = g.genre_id\n",
+    "    \"\"\", conn)\n",
+    "\n",
+    "movie_genres_df.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b6f92b9-4efa-40ed-bb8e-3d2d8fec1967",
+   "metadata": {},
+   "source": [
+    "## Naïve Implementetation"
+   ]
   }
  ],
  "metadata": {
